--- a/repower-mercury.html
+++ b/repower-mercury.html
@@ -628,7 +628,7 @@
 
                             <div class="repowerSpecialsContentWrap">
                                 <a href="javascript:void(0)">
-                                    <h4 class="homeEventTitle">Repower Special</h4>
+                                    <h4 class="repowerSpecialsTitle">Repower Special</h4>
                                 </a>
                                 <p class="regularBlackPara mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             </div>
@@ -644,7 +644,7 @@
     <section>
         <div class="mercuryOutBoardModelSection">
             <div class="repowerHeadingWrap">
-                <h3 class="mainHeading">Mercury Outboard Models</h3>
+                <h3 class="mainHeading text-center">Mercury Outboard Models</h3>
             </div>
 
             <div class="container-fluid">
@@ -884,22 +884,10 @@
 
     <section id="pageForm">
         <div class="formSection">
-            <div class="formHeadingWrap">
-                <h5 class="mainHeading mb-4">Request Repower</h5>
+            <div class="headingWrap">
+                <h5 class="mainHeading text-center">Request Repower</h5>
             </div>
             <div class="secondaryMainFormWrapper">
-                <div class="formFieldWrap">
-                    <label for="location" class="sr-only">Location</label>
-                    <div class="field-error" id="error_location"></div>
-                    <select class="formField formSelectField require_check" name="location" id="location">
-                        <option selected disabled>Select a Location</option>
-                        <option value="Location 1">Location 1</option>
-                        <option value="Location 2">Location 2</option>
-                        <option value="Location 3">Location 3</option>
-                        <option value="Location 4">Location 4</option>
-                    </select>
-                </div>
-
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 px-0">
@@ -1062,7 +1050,7 @@
 
 
                 <div class="btnWrap text-center">
-                    <button class="redBtn">Send Request</button>
+                    <button class="blueBtn">Send Request</button>
                 </div>
             </div>
         </div>
