repower yamaha page created

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Walker's Marine — Premium Boats and Marine Services.">
-    <meta name="author" content="Walker's Marine">
-    <title>Contact | Walker's Marine</title>
+    <meta name="description" content="Phill Dill Boats — Premium Boats and Marine Services.">
+    <meta name="author" content="Phill Dill Boats">
+    <title>Contact | Phill Dill Boats</title>
 
     <!-- ======= Bootstrap CSS ======= -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -75,7 +75,7 @@
             <!-- ================= STORE MENU INFO CARD ================= -->
             <div class="selectStoreMenu" style="display:none;">
                 <div class="selectStoreInnerMenu">
-                    <h4 class="selectedStoreName">Walker's Marine</h4>
+                    <h4 class="selectedStoreName">Phill Dill Boats</h4>
                     <p class="selectedStoreAddress">123 Marina Blvd, Naples, FL 34102</p>
                     <a href="tel:+1234567890" class="selectedStorePhoneNumber d-block mb-3">(123) 456-7890</a>
 
@@ -517,7 +517,7 @@
                         <div class="commonTextWrap">
                             <div class="commonTextInnerWrap">
                                 <h1 class="mainHeading">Get In Touch</h1>
-                                <p class="colorTag my-4">Contact Walker's Marine</p>
+                                <p class="colorTag my-4">Contact Phill Dill Boats</p>
 
 
                                 <div class="paraWrapper">
@@ -614,7 +614,7 @@
 
                                     <div class="contactLocationContentWrap text-center">
                                         <a href="javascript:void(0)">
-                                            <h4 class="contactLocationTitle mb-2">Walker's Marine Cape Coral</h4>
+                                            <h4 class="contactLocationTitle mb-2">Phill Dill Boats Cape Coral</h4>
                                         </a>
                                         <p class="regularBlackPara">SALES & SERVICE</p>
                                         <p class="addressPara">1503 SE 46th Ln Cape Coral, FL 33904</p>
@@ -651,7 +651,7 @@
 
                                     <div class="contactLocationContentWrap text-center">
                                         <a href="javascript:void(0)">
-                                            <h4 class="contactLocationTitle mb-2">Walker's Marine Fort Myers</h4>
+                                            <h4 class="contactLocationTitle mb-2">Phill Dill Boats Fort Myers</h4>
                                         </a>
                                         <p class="regularBlackPara">SALES</p>
                                         <p class="addressPara">16115 San Carlos Blvd, Fort Myers, FL 33094</p>
@@ -682,7 +682,7 @@
 
                                     <div class="contactLocationContentWrap text-center">
                                         <a href="javascript:void(0)">
-                                            <h4 class="contactLocationTitle mb-2">Walker's Marine FMB at Fish-Tale
+                                            <h4 class="contactLocationTitle mb-2">Phill Dill Boats FMB at Fish-Tale
                                                 Marina</h4>
                                         </a>
                                         <p class="regularBlackPara">SALES & SERVICE</p>
@@ -720,7 +720,7 @@
 
                                     <div class="contactLocationContentWrap text-center">
                                         <a href="javascript:void(0)">
-                                            <h4 class="contactLocationTitle mb-2">Walker's Marine Marco Island</h4>
+                                            <h4 class="contactLocationTitle mb-2">Phill Dill Boats Marco Island</h4>
                                         </a>
                                         <p class="regularBlackPara">SALES & SERVICE</p>
                                         <p class="addressPara">785 Bald Eagle Drive Marco Island, FL 34145</p>
@@ -763,7 +763,7 @@
 
                                     <div class="contactLocationContentWrap text-center">
                                         <a href="javascript:void(0)">
-                                            <h4 class="contactLocationTitle mb-2">Walker's Marine Marco Island Used
+                                            <h4 class="contactLocationTitle mb-2">Phill Dill Boats Marco Island Used
                                                 Boats</h4>
                                         </a>
                                         <p class="regularBlackPara">SALES</p>
@@ -795,7 +795,7 @@
 
                                     <div class="contactLocationContentWrap text-center">
                                         <a href="javascript:void(0)">
-                                            <h4 class="contactLocationTitle mb-2">Walker's Marine Naples</h4>
+                                            <h4 class="contactLocationTitle mb-2">Phill Dill Boats Naples</h4>
                                         </a>
                                         <p class="regularBlackPara">SALES & SERVICE</p>
                                         <p class="addressPara">2959 Davis Blvd. Naples, FL 34104</p>
@@ -845,7 +845,7 @@
                                 <div class="col-lg-6 mb-5 mb-lg-0">
                                     <div class="newsLetterTextWrapper">
                                         <div class="newsLetterTextInnerWrap">
-                                            <h5 class="mainHeading">Stay connected to the Walker's Marine Experience
+                                            <h5 class="mainHeading">Stay connected to the Phill Dill Boats Experience
                                             </h5>
 
                                             <div class="paraWrapper">
