--- a/event-listing.html
+++ b/event-listing.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Walker's Marine — Premium Boats and Marine Services.">
-    <meta name="author" content="Walker's Marine">
-    <title>Event Listing | Walker's Marine</title>
+    <meta name="description" content="Phill Dill Boats — Premium Boats and Marine Services.">
+    <meta name="author" content="Phill Dill Boats">
+    <title>Event Listing | Phill Dill Boats</title>
 
     <!-- ======= Bootstrap CSS ======= -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -75,7 +75,7 @@
             <!-- ================= STORE MENU INFO CARD ================= -->
             <div class="selectStoreMenu" style="display:none;">
                 <div class="selectStoreInnerMenu">
-                    <h4 class="selectedStoreName">Walker's Marine</h4>
+                    <h4 class="selectedStoreName">Phill Dill Boats</h4>
                     <p class="selectedStoreAddress">123 Marina Blvd, Naples, FL 34102</p>
                     <a href="tel:+1234567890" class="selectedStorePhoneNumber d-block mb-3">(123) 456-7890</a>
 
@@ -509,7 +509,7 @@
                 <h2 class="mainHeading mb-4">Events at Walker’s Marine</h2>
 
                 <div class="paraWrapper">
-                    <p class="regularBlackPara">There’s always something happening at Walker's Marine! We host events
+                    <p class="regularBlackPara">There’s always something happening at Phill Dill Boats! We host events
                         year-round such as Demo Days so you can try before you buy, social events to make new friends on
                         the water, classes and seminars to increase your boating knowledge, and boat shows where you can
                         view dozens of boat brands in person. Be sure to subscribe to our mailing list to stay up to
@@ -764,7 +764,7 @@
                                 <div class="col-lg-6 mb-5 mb-lg-0">
                                     <div class="newsLetterTextWrapper">
                                         <div class="newsLetterTextInnerWrap">
-                                            <h5 class="mainHeading">Stay connected to the Walker's Marine Experience
+                                            <h5 class="mainHeading">Stay connected to the Phill Dill Boats Experience
                                             </h5>
 
                                             <div class="paraWrapper">
