--- a/sell-trade.html
+++ b/sell-trade.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Walker's Marine — Premium Boats and Marine Services.">
-    <meta name="author" content="Walker's Marine">
-    <title>Sell Trade | Walker's Marine</title>
+    <meta name="description" content="Phill Dill Boats — Premium Boats and Marine Services.">
+    <meta name="author" content="Phill Dill Boats">
+    <title>Sell Trade | Phill Dill Boats</title>
 
     <!-- ======= Bootstrap CSS ======= -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -75,7 +75,7 @@
             <!-- ================= STORE MENU INFO CARD ================= -->
             <div class="selectStoreMenu" style="display:none;">
                 <div class="selectStoreInnerMenu">
-                    <h4 class="selectedStoreName">Walker's Marine</h4>
+                    <h4 class="selectedStoreName">Phill Dill Boats</h4>
                     <p class="selectedStoreAddress">123 Marina Blvd, Naples, FL 34102</p>
                     <a href="tel:+1234567890" class="selectedStorePhoneNumber d-block mb-3">(123) 456-7890</a>
 
@@ -521,7 +521,7 @@
         <div class="weBuySection">
             <div class="headingWrap">
                 <h2 class="mainHeading mb-4">We Will Buy Your Boat</h2>
-                <p class="regularBlackPara">Walker's Marine provides simple processes so we can get your boat quickly.
+                <p class="regularBlackPara">Phill Dill Boats provides simple processes so we can get your boat quickly.
                 </p>
             </div>
 
@@ -579,7 +579,7 @@
         <div class="whySellSection">
             <div class="whySellHeadingWrap">
                 <h3 class="mainHeading">Why Sell With Us</h3>
-                <p class="colorTag mt-4">Walker's MArine Benefits </p>
+                <p class="colorTag mt-4">Phill Dill Boats Benefits </p>
             </div>
 
             <div class="container-fluid">
@@ -908,7 +908,7 @@
                                 <div class="col-lg-6 mb-5 mb-lg-0">
                                     <div class="newsLetterTextWrapper">
                                         <div class="newsLetterTextInnerWrap">
-                                            <h5 class="mainHeading">Stay connected to the Walker's Marine Experience
+                                            <h5 class="mainHeading">Stay connected to the Phill Dill Boats Experience
                                             </h5>
 
                                             <div class="paraWrapper">
