--- a/service.html
+++ b/service.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Walker's Marine — Premium Boats and Marine Services.">
-    <meta name="author" content="Walker's Marine">
-    <title>Service | Walker's Marine</title>
+    <meta name="description" content="Phill Dill Boats — Premium Boats and Marine Services.">
+    <meta name="author" content="Phill Dill Boats">
+    <title>Service | Phill Dill Boats</title>
 
     <!-- ======= Bootstrap CSS ======= -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -75,7 +75,7 @@
             <!-- ================= STORE MENU INFO CARD ================= -->
             <div class="selectStoreMenu" style="display:none;">
                 <div class="selectStoreInnerMenu">
-                    <h4 class="selectedStoreName">Walker's Marine</h4>
+                    <h4 class="selectedStoreName">Phill Dill Boats</h4>
                     <p class="selectedStoreAddress">123 Marina Blvd, Naples, FL 34102</p>
                     <a href="tel:+1234567890" class="selectedStorePhoneNumber d-block mb-3">(123) 456-7890</a>
 
@@ -509,7 +509,7 @@
                 alt="service-header">
 
             <div class="headerContent">
-                <h1 class="headerHeading">Service Center at Walker's Marine</h1>
+                <h1 class="headerHeading">Service Center at Phill Dill Boats</h1>
                 <div class="headerBtnWrap">
                     <a href="javascript:void(0)" class="redBtn">Request Service</a>
                 </div>
@@ -524,7 +524,7 @@
                 <p class="colorTag">FACTORY CERTIFIED</p>
 
                 <div class="paraWrapper">
-                    <p class="regularBlackPara">Walker's Marine provides a comprehensive, full-service marine facility
+                    <p class="regularBlackPara">Phill Dill Boats provides a comprehensive, full-service marine facility
                         dedicated to keeping your boat in prime condition, whether you're prepping for the season,
                         upgrading, or addressing repairs.</p>
                 </div>
@@ -639,7 +639,7 @@
                                     <div class="serviceContentWrap">
                                         <h4 class="topServiceCardTitle mb-3">Power-Pole Installation Services</h4>
                                         <p class="regularBlackPara text-left">Experience precise, effortless anchoring
-                                            with Power-Pole shallow water systems at Walker's Marine. Our expert team
+                                            with Power-Pole shallow water systems at Phill Dill Boats. Our expert team
                                             installs your Power-Pole for seamless integration, giving you silent, secure
                                             stopping power and greater control whether you're fishing or holding
                                             position.</p>
@@ -657,7 +657,7 @@
                                         <h4 class="topServiceCardTitle mb-3">Engine Repowers</h4>
                                         <p class="regularBlackPara text-left">Repower your boat with confidence. Whether
                                             you're upgrading for better performance, fuel efficiency, or reliability,
-                                            Walker's Marine makes the process simple and worry-free. Our certified
+                                            Phill Dill Boats makes the process simple and worry-free. Our certified
                                             technicians specialize in leading outboard brands, guiding you through
                                             selection, installation, and warranty details for a seamless upgrade that
                                             delivers improved efficiency, quieter operation, and lasting value.</p>
@@ -674,7 +674,7 @@
                                     <div class="serviceContentWrap">
                                         <h4 class="topServiceCardTitle mb-3">Engine Repowers</h4>
                                         <p class="regularBlackPara text-left">Keep your boat looking and performing its
-                                            best with professional detailing and bottom painting from Walker's Marine.
+                                            best with professional detailing and bottom painting from Phill Dill Boats.
                                             Our expert team provides full interior and exterior detailing, gelcoat
                                             restoration, hull cleaning, and anti-fouling paint applications—delivering
                                             lasting protection, improved performance, and a like-new shine season after
@@ -1455,7 +1455,7 @@
                                 <div class="col-lg-6 mb-5 mb-lg-0">
                                     <div class="newsLetterTextWrapper">
                                         <div class="newsLetterTextInnerWrap">
-                                            <h5 class="mainHeading">Stay connected to the Walker's Marine Experience
+                                            <h5 class="mainHeading">Stay connected to the Phill Dill Boats Experience
                                             </h5>
 
                                             <div class="paraWrapper">
