--- a/marine-insurance.html
+++ b/marine-insurance.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Walker's Marine — Premium Boats and Marine Services.">
-    <meta name="author" content="Walker's Marine">
-    <title>Marine Insurance | Walker's Marine</title>
+    <meta name="description" content="Phill Dill Boats — Premium Boats and Marine Services.">
+    <meta name="author" content="Phill Dill Boats">
+    <title>Marine Insurance | Phill Dill Boats</title>
 
     <!-- ======= Bootstrap CSS ======= -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -75,7 +75,7 @@
             <!-- ================= STORE MENU INFO CARD ================= -->
             <div class="selectStoreMenu" style="display:none;">
                 <div class="selectStoreInnerMenu">
-                    <h4 class="selectedStoreName">Walker's Marine</h4>
+                    <h4 class="selectedStoreName">Phill Dill Boats</h4>
                     <p class="selectedStoreAddress">123 Marina Blvd, Naples, FL 34102</p>
                     <a href="tel:+1234567890" class="selectedStorePhoneNumber d-block mb-3">(123) 456-7890</a>
 
@@ -652,7 +652,7 @@
                                 <div class="col-lg-6 mb-5 mb-lg-0">
                                     <div class="newsLetterTextWrapper">
                                         <div class="newsLetterTextInnerWrap">
-                                            <h5 class="mainHeading">Stay connected to the Walker's Marine Experience
+                                            <h5 class="mainHeading">Stay connected to the Phill Dill Boats Experience
                                             </h5>
 
                                             <div class="paraWrapper">
