--- a/pro-shop.html
+++ b/pro-shop.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Walker's Marine — Premium Boats and Marine Services.">
-    <meta name="author" content="Walker's Marine">
-    <title>Pro Shop | Walker's Marine</title>
+    <meta name="description" content="Phill Dill Boats — Premium Boats and Marine Services.">
+    <meta name="author" content="Phill Dill Boats">
+    <title>Pro Shop | Phill Dill Boats</title>
 
     <!-- ======= Bootstrap CSS ======= -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -76,7 +76,7 @@
             <!-- ================= STORE MENU INFO CARD ================= -->
             <div class="selectStoreMenu" style="display:none;">
                 <div class="selectStoreInnerMenu">
-                    <h4 class="selectedStoreName">Walker's Marine</h4>
+                    <h4 class="selectedStoreName">Phill Dill Boats</h4>
                     <p class="selectedStoreAddress">123 Marina Blvd, Naples, FL 34102</p>
                     <a href="tel:+1234567890" class="selectedStorePhoneNumber d-block mb-3">(123) 456-7890</a>
 
