--- a/event-detail.html
+++ b/event-detail.html
@@ -570,7 +570,7 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <div class="commonTextWrap">
+                        <div class="commonTextWrap pt-5">
                             <div class="commonTextInnerWrap">
                                 <div class="headingWrap">
                                     <h1 class="mainHeading">Phil Dill Boats at the Dallas Boat Show</h1>
@@ -585,12 +585,20 @@
 
                                     <h2 class="smallBoldHeading my-3">Why Attend?</h2>
 
-                                    <p class="regularBlackPara">Don’t miss your chance to find your perfect boat, stock
+                                    <ul class="ml-4">
+                                        <li class="regularBlackPara mb-2">Explore the latest boats from the most trusted brands</li>
+                                        <li class="regularBlackPara mb-2">Shop watersports gear including wakeboards, surfboards, tubes & more</li>
+                                        <li class="regularBlackPara mb-2">Meet our experts and get personalized advice tailored to your boating lifestyle</li>
+                                        <li class="regularBlackPara mb-2">Exclusive show deals on inventory, gear, and service packages</li>
+                                        <li class="regularBlackPara mb-2">Family fun vibes–bring the kids, bring your questions, bring your lake dreams!</li>
+                                    </ul>
+
+                                    <p class="regularBlackPara mt-3">Don’t miss your chance to find your perfect boat, stock
                                         up on gear for your best season yet, and make unforgettable memories with the
                                         family. Connect with the team at Phil Dill Boats, your trusted partner on and
                                         off the water.</p>
 
-                                    <p class="mt-3 eventBoldText">Limited Space Available — Secure Your Spot Today!</p>
+                                    
                                 </div>
 
                                 <div class="btnWrap flexBtnWrapper justify-content-center justify-content-lg-start">
