--- a/about.html
+++ b/about.html
@@ -720,7 +720,7 @@
                                         </div>
 
                                         <div>
-                                            <button class="whiteBtn">JOIN NEWSLETTER</button>
+                                            <button class="secondaryWhiteBtn">JOIN NEWSLETTER</button>
                                         </div>
                                     </div>
                                 </div>
