--- a/blog-listing.html
+++ b/blog-listing.html
@@ -778,7 +778,7 @@
                                         </div>
 
                                         <div>
-                                            <button class="whiteBtn">JOIN NEWSLETTER</button>
+                                            <button class="secondaryWhiteBtn">JOIN NEWSLETTER</button>
                                         </div>
                                     </div>
                                 </div>
