--- a/location-template.html
+++ b/location-template.html
@@ -1076,7 +1076,7 @@
                                         </div>
 
                                         <div>
-                                            <button class="whiteBtn">JOIN NEWSLETTER</button>
+                                            <button class="secondaryWhiteBtn">JOIN NEWSLETTER</button>
                                         </div>
                                     </div>
                                 </div>
