--- a/no-event.html
+++ b/no-event.html
@@ -612,7 +612,7 @@
                                         </div>
 
                                         <div>
-                                            <button class="whiteBtn">JOIN NEWSLETTER</button>
+                                            <button class="secondaryWhiteBtn">JOIN NEWSLETTER</button>
                                         </div>
                                     </div>
                                 </div>
