--- a/reviews.html
+++ b/reviews.html
@@ -721,7 +721,7 @@
                                         </div>
 
                                         <div>
-                                            <button class="whiteBtn">JOIN NEWSLETTER</button>
+                                            <button class="secondaryWhiteBtn">JOIN NEWSLETTER</button>
                                         </div>
                                     </div>
                                 </div>
