marine insurance page created

--- a/financing.html
+++ b/financing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Phill Dill Boats — Premium Boats and Marine Services.">
     <meta name="author" content="Phill Dill Boats">
-    <title>Fiancing | Phill Dill Boats</title>
+    <title>Financing | Phill Dill Boats</title>
 
     <!-- ======= Bootstrap CSS ======= -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -559,7 +559,6 @@
     <!-- resources mega menu ends here -->
 
     <!-- finacning page starts here -->
-    <!-- contact page starts here -->
 
     <section>
         <div class="contactHeaderSection">
