--- a/service.html
+++ b/service.html
@@ -158,7 +158,7 @@
         <div class="mobileTopBar">
             <div class="mobileTopBarInnerWrap">
                 <div class="mobileLocationInfoWrap" id="mobileLocationInfoToggler">
-                    <img src="./assets/images/mega-menus/mobile-location-icon.png" alt="location-icon">
+                    <img src="./assets/images/mega-menus/mobile-location-icon.webp" alt="location-icon">
                     <p class="mobilePhoneLocationWrap">Cape Coral, FL 33904</p>
                 </div>
 
@@ -601,6 +601,12 @@
                             <div class="col-lg-6">
                                 <div class="textAndImageWithSideImageWrap">
                                     <img src="./assets/images/service/service-specials.webp" alt="service-specials">
+                                </div>
+
+                                <div class="servicePageTextWrap">
+                                    <h3 class="redColorTag">Service Special</h3>
+                                    <p class="my-2 servicePageColorText">Fall Service EarlyBird Savings</p>
+                                    <p class="regularBlackPara">Schedule your Fall maintenance early and enjoy exclusive discounts on service and storage.</p>
                                 </div>
                             </div>
                         </div>
