--- a/contact.html
+++ b/contact.html
@@ -158,7 +158,7 @@
         <div class="mobileTopBar">
             <div class="mobileTopBarInnerWrap">
                 <div class="mobileLocationInfoWrap" id="mobileLocationInfoToggler">
-                    <img src="./assets/images/mega-menus/mobile-location-icon.png" alt="location-icon">
+                    <img src="./assets/images/mega-menus/mobile-location-icon.webp" alt="location-icon">
                     <p class="mobilePhoneLocationWrap">Cape Coral, FL 33904</p>
                 </div>
 
