--- a/home.html
+++ b/home.html
@@ -77,14 +77,28 @@
             <div class="selectStoreMenu" style="display:none;">
                 <div class="selectStoreInnerMenu">
                     <h4 class="selectedStoreName">Phill Dill Boats</h4>
-                    <p class="selectedStoreAddress">123 Marina Blvd, Naples, FL 34102</p>
+                    <p class="selectedStoreAddress">1520 N Stemmons Freeway, <br>Lewisville, TX 75067 </p>
                     <a href="tel:+1234567890" class="selectedStorePhoneNumber d-block mb-3">(123) 456-7890</a>
 
-                    <button class="redBtn w-100" id="changeYourLocationClick">Change Your Store</button>
-                    <a href="javascript:void(0)" class="primaryWhiteBtn d-block mt-2 text-center"
-                        id="storeDetailsBtnClick">
-                        Location Details & Services
-                    </a>
+                    <div class="mt-3 mb-4">
+                        <p class="regularBlackPara">SALES HOURS</p>
+                        <p class="regularBlackPara">Tuesday-Saturday: 9:00AM-5:00PM</p>
+                        <p class="regularBlackPara">Sunday/Monday: Closed</p>
+                    </div>
+
+                    <div>
+                        <p class="regularBlackPara">SERVICE HOURS</p>
+                        <p class="regularBlackPara">Tuesday-Saturday: 8:30AM-5:30PM</p>
+                        <p class="regularBlackPara">Sunday/Monday: Closed</p>
+                    </div>
+
+                    <div class="btnWrap">
+                        <button class="blueBtn" id="changeYourLocationClick">Change Your Store</button>
+                        <a href="javascript:void(0)" class="secondaryBlueBtn d-block mt-3 text-center"
+                            id="storeDetailsBtnClick">
+                            Location Details & Services
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -158,12 +172,12 @@
         <div class="mobileTopBar">
             <div class="mobileTopBarInnerWrap">
                 <div class="mobileLocationInfoWrap" id="mobileLocationInfoToggler">
-                    <img src="./assets/images/mega-menus/mobile-location-icon.png" alt="location-icon">
-                    <p class="mobilePhoneLocationWrap">Cape Coral, FL 33904</p>
+                    <img src="./assets/images/mega-menus/mobile-location-icon.webp" alt="location-icon">
+                    <p class="mobilePhoneLocationWrap">Lewisville, TX 75067</p>
                 </div>
 
                 <div>
-                    <a href="tel:+12393561450" class="mobileTopBarPhone">(239) 356-1450</a>
+                    <a href="tel:+19723667191" class="mobileTopBarPhone">(972) 366-7191</a>
                 </div>
             </div>
         </div>
@@ -240,7 +254,7 @@
                         <div class="col-4 px-1 mb-2">
                             <a href="/" id="mobile-nav-bar-inventory-sunchaser-btn">
                                 <div class="mobileBoatsMenuCard">
-                                    <img src="./assets/images/mega-menus/axopar-mobile-logo.webp" alt="sunchaser">
+                                    <img src="./assets/images/mega-menus/bennigton-mobile.webp" alt="bennigton">
                                 </div>
                             </a>
                         </div>
@@ -248,7 +262,7 @@
                         <div class="col-4 px-1 mb-2">
                             <a href="/" id="mobile-nav-bar-inventory-sunchaser-btn">
                                 <div class="mobileBoatsMenuCard">
-                                    <img src="./assets/images/mega-menus/cobia-mobile-logo.webp" alt="sunchaser">
+                                    <img src="./assets/images/mega-menus/regal-mobile.png" alt="regal">
                                 </div>
                             </a>
                         </div>
@@ -256,47 +270,7 @@
                         <div class="col-4 px-1 mb-2">
                             <a href="/" id="mobile-nav-bar-inventory-sunchaser-btn">
                                 <div class="mobileBoatsMenuCard">
-                                    <img src="./assets/images/mega-menus/evotti-mobile-logo.webp" alt="sunchaser">
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="col-4 px-1 mb-2">
-                            <a href="/" id="mobile-nav-bar-inventory-sunchaser-btn">
-                                <div class="mobileBoatsMenuCard">
-                                    <img src="./assets/images/mega-menus/harris-mobile-logo.webp" alt="sunchaser">
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="col-4 px-1 mb-2">
-                            <a href="/" id="mobile-nav-bar-inventory-sunchaser-btn">
-                                <div class="mobileBoatsMenuCard">
-                                    <img src="./assets/images/mega-menus/hcb-mobile-logo.webp" alt="sunchaser">
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="col-4 px-1 mb-2">
-                            <a href="/" id="mobile-nav-bar-inventory-sunchaser-btn">
-                                <div class="mobileBoatsMenuCard">
-                                    <img src="./assets/images/mega-menus/pursuit-mobile-logo.webp" alt="sunchaser">
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="col-4 px-1 mb-2">
-                            <a href="/" id="mobile-nav-bar-inventory-sunchaser-btn">
-                                <div class="mobileBoatsMenuCard">
-                                    <img src="./assets/images/mega-menus/regal-mobile-logo.webp" alt="sunchaser">
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="col-4 px-1 mb-2">
-                            <a href="/" id="mobile-nav-bar-inventory-sunchaser-btn">
-                                <div class="mobileBoatsMenuCard">
-                                    <img src="./assets/images/mega-menus/tiara-mobile-logo.webp" alt="sunchaser">
+                                    <img src="./assets/images/mega-menus/yamaha-mobile.png" alt="yamaha">
                                 </div>
                             </a>
                         </div>
@@ -350,7 +324,7 @@
 
         <div class="mobileSelectStoreMenu">
             <div class="mobileSelectStoreHeaderWrap mb-3">
-                <h4 class="mobileSelectedStoreTitle">Walker’s Marine Cape Coral</h4>
+                <h4 class="mobileSelectedStoreTitle">Phil Dill Boats</h4>
                 <img class="mobileBackArrow" src="./assets/images/mega-menus/mobile-back-arrow-black.png" alt="">
             </div>
 
@@ -374,8 +348,8 @@
             </div>
 
             <div class="btnWrap d-flex flex-wrap flex-column">
-                <a href="javacript:void(0)" class="redBtn">Change Your Store</a>
-                <a href="javacript:void(0)" class="primaryWhiteBtn mt-3">Location Details & Services</a>
+                <a href="javacript:void(0)" class="blueBtn" style="width: fit-content;">Change Your Store</a>
+                <a href="javacript:void(0)" class="secondaryBlueBtn mt-3" style="width: fit-content;">Location Details & Services</a>
             </div>
         </div>
     </header>
