--- a/marine-insurance.html
+++ b/marine-insurance.html
@@ -158,7 +158,7 @@
         <div class="mobileTopBar">
             <div class="mobileTopBarInnerWrap">
                 <div class="mobileLocationInfoWrap" id="mobileLocationInfoToggler">
-                    <img src="./assets/images/mega-menus/mobile-location-icon.png" alt="location-icon">
+                    <img src="./assets/images/mega-menus/mobile-location-icon.webp" alt="location-icon">
                     <p class="mobilePhoneLocationWrap">Cape Coral, FL 33904</p>
                 </div>
 
@@ -711,66 +711,6 @@
                 </div>
             </div>
 
-        </div>
-    </section>
-
-    <section id="pageForm">
-        <div class="formSection">
-            <div class="formHeadingWrap">
-                <h5 class="mainHeading">Get Marine Insurance</h5>
-            </div>
-            <div class="mainFormWrapper">
-                <div class="formFieldWrap">
-                    <label for="location" class="sr-only">Location</label>
-                    <div class="field-error" id="error_location"></div>
-                    <select class="formField formSelectField require_check" name="location" id="location">
-                        <option selected disabled>Select a Location</option>
-                        <option value="Location 1">Location 1</option>
-                        <option value="Location 2">Location 2</option>
-                        <option value="Location 3">Location 3</option>
-                        <option value="Location 4">Location 4</option>
-                    </select>
-                </div>
-
-                <div class="formFieldWrap">
-                    <label for="firstName" class="sr-only">First Name</label>
-                    <div class="field-error" id="error_firstName"></div>
-                    <input class="formField require_check" type="text" id="fir" placeholder="First Name*">
-                </div>
-
-                <div class="formFieldWrap">
-                    <label for="lastName" class="sr-only">Last Name</label>
-                    <div class="field-error" id="error_lastName"></div>
-                    <input class="formField require_check" type="text" id="fir" placeholder="Last Name*">
-                </div>
-
-                <div class="formFieldWrap">
-                    <label for="email" class="sr-only">Email</label>
-                    <div class="field-error" id="error_email"></div>
-                    <input class="formField require_check" type="text" id="email" placeholder="Email *">
-                </div>
-
-                <div class="formFieldWrap">
-                    <label for="phone" class="sr-only">Phone</label>
-                    <div class="field-error" id="error_phone"></div>
-                    <input class="formField require_check" type="text" id="Phone" placeholder="Phone*">
-                </div>
-
-                <div class="formFieldWrap">
-                    <label for="newsZipCode" class="sr-only">Zip Code</label>
-                    <div class="field-error" id="error_newsZipCode"></div>
-                    <input class="formField require_check" type="text" id="newsZipCode" placeholder="Zip Code*">
-                </div>
-
-                <div class="formFieldWrap">
-                    <textarea rows="1" class="formField" name="comments" id="comments"
-                        placeholder="Additional Comments"></textarea>
-                </div>
-
-                <div class="btnWrap text-center">
-                    <button class="redBtn">Send</button>
-                </div>
-            </div>
         </div>
     </section>
     <!-- marine insurance page ends here -->
