--- a/home.html
+++ b/home.html
@@ -589,7 +589,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="d-none d-lg-block">
         <div class="boatingStyleSection">
             <div class="container-fluid">
                 <div class="row">
@@ -640,6 +640,59 @@
                     </div>
                 </div>
             </div>
+    </section>
+
+    <section class="d-block d-lg-none mobileShopByTypeSection">
+        <div class="container-fluid">
+            <div class="col-12">
+                <div class="headingWrap">
+                    <h1 class="mainHeading">Shop By Type</h1>
+                </div>
+
+                <div class="shopByTypeCarouselWrap">
+                    <div class="shopByTypeCarousel owl-carousel owl-theme">
+                        <div class="items">
+                            <a href="javascript:void(0)">
+                                <div class="boatingStyleCard px-0">
+                                    <div class="boatingStyleContentWrap">
+                                        <div class="boatingStyleImageWrap">
+                                            <img src="./assets/images/home/bowrider.webp" alt="bowrider">
+                                        </div>
+                                        <h3 class="boatingStyleCardTitle">Bowrider</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="items">
+                            <a href="javascript:void(0)">
+                                    <div class="boatingStyleCard px-0">
+                                        <div class="boatingStyleContentWrap">
+                                            <div class="boatingStyleImageWrap">
+                                                <img src="./assets/images/home/center-console.webp" alt="Center Console">
+                                            </div>
+                                            <h3 class="boatingStyleCardTitle">Center Console</h3>
+                                        </div>
+                                    </div>
+                                </a>
+                        </div>
+
+                        <div class="items">
+                            <a href="javascript:void(0)">
+                                    <div class="boatingStyleCard px-0">
+                                        <div class="boatingStyleContentWrap">
+                                            <div class="boatingStyleImageWrap">
+                                                <img src="./assets/images/home/cruisers-mobile.webp" alt="Cruiser">
+                                            </div>
+                                            <h3 class="boatingStyleCardTitle">Cruiser</h3>
+                                        </div>
+                                    </div>
+                                </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section>
@@ -889,7 +942,7 @@
                         <div class="otherLinkComponentWrap">
                             <div class="contanier-fluid">
                                 <div class="row">
-                                    <div class="col-md-6 mb-3 mb-md-0 px-0">
+                                    <div class="col-md-6 mb-3 mb-md-0">
                                         <div class="otherLinkImageWrap">
                                             <img src="./assets/images/home/sell-trade.webp" alt="sell-trade">
                                         </div>
@@ -908,7 +961,7 @@
                                                 </div>
 
                                                 <div>
-                                                    <a href="javascript:void(0)" class="blueBtn">Request Service</a>
+                                                    <a href="javascript:void(0)" class="blueBtn">Get An Appraisal</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -920,7 +973,7 @@
                         <div class="otherLinkComponentWrap">
                             <div class="contanier-fluid">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 order-2 order-md-1">
                                         <div class="otherLinkTextWrap justify-content-center">
                                             <div class="otherLinkTextInnerWrap">
                                                 <h3 class="mainHeading">Marine Service Center</h3>
@@ -939,7 +992,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6 mb-3 mb-md-0 px-0">
+                                    <div class="col-md-6 order-1 order-md-2 mb-3 mb-md-0">
                                         <div class="otherLinkImageWrap">
                                             <img src="./assets/images/home/marine-service.webp" alt="marine-service">
                                         </div>
@@ -962,7 +1015,7 @@
                             <div class="d-none d-lg-block"></div>
                             <div class="homeSpecialsHeadingAndBtnWrap">
                                 <h4 class="mainHeading">New Arrivals</h4>
-                                <a href="javascript:void(0)" class="secondaryRedBtn">All Specials ></a>
+                                <a href="javascript:void(0)" class="secondaryRedBtn d-none d-lg-block">All Specials ></a>
                             </div>
                         </div>
 
@@ -1283,7 +1336,7 @@
                                 </div>
 
                                 <div>
-                                    <a href="javscript:void(0)" class="whiteBtn">MORE ABOUT US</a>
+                                    <a href="javscript:void(0)" class="secondaryWhiteBtn">MORE ABOUT US</a>
                                 </div>
                             </div>
                         </div>
