--- a/contact.html
+++ b/contact.html
@@ -679,7 +679,7 @@
                 <div class="row">
                     <div class="col-xl-10 col-lg-11 mx-auto">
                         <div class="row">
-                            <div class="col-md-6 mb-4 mb-md-5 px-0">
+                            <div class="col-md-6 mb-5 mb-md-0 px-0">
                                 <div class="contactLocationCard">
                                     <div class="contactLocationImageWrap">
                                         <iframe
@@ -710,7 +710,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-6 mb-4 mb-md-5 px-0">
+                            <div class="col-md-6 px-0">
                                 <div class="contactLocationCard">
                                     <div class="contactLocationImageWrap">
                                         <iframe
