site complete responsive

--- a/financing.html
+++ b/financing.html
@@ -578,7 +578,7 @@
                                 <div class="contactTextWrapper">
                                     <div class="financeTextInnerWrap">
                                         <h1 class="contactHeading">Finance Your Boat With Us</h1>
-                                        <p class="boldPara text-left my-4">Purchasing your boat doesn’t have to be complicated.</p>
+                                        <p class="boldPara text-center text-lg-left my-4">Purchasing your boat doesn’t have to be complicated.</p>
                                         <p class="regularBlackPara">When it comes to financing your dream, there are countless programs. Our Business Managers listen to your needs before presenting you with the best available finance options to accomplish your goals. Rates and terms are achievable by most every source within our space. It is the superior level of service while executing the customer’s objectives that sets us apart.</p>
 
                                         <div class="btnWrap">
