--- a/marine-insurance.html
+++ b/marine-insurance.html
@@ -580,7 +580,7 @@
                                 <div class="contactTextWrapper">
                                     <div class="financeTextInnerWrap">
                                         <h1 class="mainHeading">Protect What Matters</h1>
-                                        <p class="marineBoldPara text-left my-4">Enjoy peace of mind as you navigate
+                                        <p class="marineBoldPara text-center text-lg-left my-4">Enjoy peace of mind as you navigate
                                             your boat
                                             and let Singleton Marine handle protecting you.</p>
                                         <p class="regularBlackPara">We source insurance quotes and policies from
