--- a/brand-page-template.html
+++ b/brand-page-template.html
@@ -563,7 +563,7 @@
         <div class="commonImageAndTextSection">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-6 mb-4 mb-lg-0 px-0">
+                    <div class="col-lg-6 px-0">
                         <div class="commonImageWrap">
                             <img src="./assets/images/brand-page-template/brand-page-header.webp"
                                 alt="brand-page-template">
